3-k8-setup-core/echoserver/base/echoserver.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "echoserver.localhost"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: echoserver
          kind: service
          port: 8080 # Envoy will talk to your app over port 8080 (HTTP)
